# py2anki

./: README.md  pyproject.toml
py2anki/: entity.py
py2anki/parse/: __init__.py  parse.py  parsed_entities.py  utils.py
tests/parsing/: test_dependency.py  test_parsing.py  test_project.py
tests/parsing/mock/: basic.py  dependency.py
tests/parsing/mock/exampleproject/: setup.py
tests/parsing/mock/exampleproject/exampleproject/: main.py
tests/parsing/mock/exampleproject/exampleproject.egg-info/: PKG-INFO  SOURCES.txt
tests/parsing/mock/exampleproject/exampleproject/subpackage1/: foo.py
tests/parsing/mock/exampleproject/exampleproject/subpackage2/: bar.py
tests/parsing/mock/exampleproject/exampleproject/subpackage2/nested/: nest.py
tests/parsing/mock/exampleproject/exampleproject/subpackage2/nested/extranested/: __init__.py  deep.py  other.py
